test/runtime/fail/import/invalid_path.hy

// expect error: Invalid import path

import "/./.&71f*&_"
